feat: 鍵盤表示のロジックとデザインの修正

--- a/static/style.css
+++ b/static/style.css
@@ -163,3 +163,55 @@ button:hover {
 .menu-item-button {
     margin: 0;
 }
+
+/* ピアノ鍵盤のスタイル */
+.piano-keyboard-wrapper {
+    margin: 20px auto;
+    width: fit-content;
+    overflow-x: hidden;
+    position: relative;
+    border: 1px solid #333;
+    box-sizing: border-box;
+    padding: 1px; /* 鍵盤の端が見切れないように */
+}
+
+.piano-keyboard-content {
+    position: relative;
+    height: 120px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.white-key,
+.black-key {
+    box-sizing: border-box;
+    position: relative;
+}
+
+.white-key {
+    width: 30px;
+    height: 120px;
+    background-color: #fff;
+    border-right: 1px solid #333;
+}
+
+.black-key {
+    position: absolute;
+    width: 20px;
+    height: 80px;
+    background-color: #333;
+    z-index: 1;
+}
+
+/* 鍵盤に印をつけるスタイル */
+.note-mark {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
