feat(JS): コード一覧のセブンスの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,12 +146,14 @@
 
     <main id="minor7-chord-screen" class="screen">
         <h1>マイナーセブンス</h1>
-        <p>ここに内容が入ります。</p>
+        <div id="minor7-chords-container">
+        </div>
         <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
     </main>
     <main id="7th-chord-screen" class="screen">
         <h1>セブンス</h1>
-        <p>ここに内容が入ります。</p>
+        <div id="7th-chords-container">
+        </div>
         <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
     </main>
 
