feat(JS): コード一覧のロジック完成

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,6 +138,7 @@
     </main>
 
     <main id="major7-chord-screen" class="screen">
+        <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
         <h1>メジャーセブンス</h1>
         <div id="major7-chords-container">
         </div>
@@ -145,12 +146,14 @@
     </main>
 
     <main id="minor7-chord-screen" class="screen">
+        <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
         <h1>マイナーセブンス</h1>
         <div id="minor7-chords-container">
         </div>
         <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
     </main>
     <main id="7th-chord-screen" class="screen">
+        <p class="back-link"><a href="#" data-screen="chord-list-screen">コード一覧へ戻る</a></p>
         <h1>セブンス</h1>
         <div id="7th-chords-container">
         </div>
