--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
             </div>
             <button type="submit">ログイン</button>
         </form>
-        <p class="back-link"><a href="#" class="back-to-selection">戻る</a></p>
+        <p class="back-link"><a href="#" data-screen="selection-screen">戻る</a></p>
     </main>
 
     <main id="signup-screen" class="screen">
